# Interflow

./: .gitignore  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: analysis_agent.py  decision_agent.py  research_agent.py
backend/app/api/routes/: agents.py  health.py  orchestrate.py
backend/app/db/: models.py  mongo.py
backend/app/models/: api_models.py
backend/app/orchestration/: agent_manager.py  state_manager.py  task_router.py  workflow_engine.py
tests/: test_research_agent.py
