[project]
name = "interflow"
version = "0.1.0"
description = "Python Agent Orchestration MVP - n8n for AI Agents "
authors = [
    {name = "farizsalman",email = "salmanfarisnbr12@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "streamlit (>=1.50.0,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "beanie (>=2.0.0,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "huggingface-hub (>=0.35.3,<0.36.0)",
    "transformers (>=4.57.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
